Fixed an overflow issue with the tables.

--- a/src/admin/stories/view/containers/StoryContainer.module.scss
+++ b/src/admin/stories/view/containers/StoryContainer.module.scss
@@ -22,6 +22,7 @@
   flex-direction: column;
   align-items: flex-start;
   flex: 1 1;
+  height: 100%;
 }
 
 .storiesContainer {
